fix button scaling on mobile

--- a/style.css
+++ b/style.css
@@ -34,10 +34,16 @@ body {
   .calculator {
     width: 75vw;
   }
+  .button.action {
+    font-size: 1.5rem;
+  }
 }
 @media only screen and (min-width: 801px) and (max-width: 1200px) {
   .calculator {
-    width: 40vw;
+    width: 50vw;
+  }
+  .button.action {
+    font-size: 1.75rem;
   }
 }
 
